--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,15 @@
             android:text=""
             android:paddingTop="16dp" />
 
+        <Button
+            android:id="@+id/crearUsuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:onClick="irHaciaCrearUsuario"
+            android:text="Crear Usuario"
+            android:textColor="@color/purple_500" />
     </LinearLayout>
 
 
