Ingreso con los datos completos

--- a/app/src/main/res/layout/activity_crear_usuario.xml
+++ b/app/src/main/res/layout/activity_crear_usuario.xml
@@ -17,25 +17,49 @@
             android:id="@+id/first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="First Name" />
+            android:hint="Primer Nombre" />
+
+        <EditText
+            android:id="@+id/first_name2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Segundo Nombre" />
 
         <EditText
             android:id="@+id/last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Last Name" />
+            android:hint="Primer Apellido" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/last_name2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username" />
+            android:hint="Segundo Apellido" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/telefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="Telefono" />
+
+        <EditText
+            android:id="@+id/direccion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Direccion" />
+
+        <EditText
+            android:id="@+id/correo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="CorreoElectronico" />
+
+        <EditText
+            android:id="@+id/contrasena"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Contrasena "
             android:inputType="textPassword" />
 
         <Button
