--- a/app/src/main/res/layout/activity_crear_usuario.xml
+++ b/app/src/main/res/layout/activity_crear_usuario.xml
@@ -50,13 +50,13 @@
             android:hint="Direccion" />
 
         <EditText
-            android:id="@+id/correo"
+            android:id="@+id/NombreRUsuario1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="CorreoElectronico" />
 
         <EditText
-            android:id="@+id/contrasena"
+            android:id="@+id/TelefonoR"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Contrasena "
