Se agrego el spinner

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
             android:hint="Contrasena"
             android:inputType="textPassword" />
 
+        <Spinner
+            android:id="@+id/spinner_roles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dropdown" />
+
         <Button
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
@@ -38,6 +45,9 @@
             android:layout_height="wrap_content"
             android:text=""
             android:paddingTop="16dp" />
+
+        <!-- ComboBox (Spinner) para seleccionar el rol -->
+
 
         <Button
             android:id="@+id/crearUsuario"
